Start of the dev : Bio and navbar

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,11 @@
 import ThemeSelector from "./ThemeSelector.astro";
 ---
 
-<div>
-  <div class="navbar">
+<div class="w-full">
+  <div class="navbar bg-base-200">
+    <div class="navbar-start">
+      <a href="/" class="">ELIAZ-LR</a>
+    </div>
     <div class="navbar-end">
       <ThemeSelector />
     </div>
