--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,11 +1,9 @@
 ---
 import Header from "../components/Header.astro";
 
-export interface Props {
-  title: string;
-}
+import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
-const { title } = Astro.props;
+const { title = SITE_TITLE } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -20,6 +18,10 @@ const { title } = Astro.props;
   </head>
   <body>
     <Header />
-    <slot />
+    <div class="md:flex md:justify-center">
+      <main class="p-6 pt-10 lg:pt-0 max-w-[900px]">
+        <slot />
+      </main>
+    </div>
   </body>
 </html>
