--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Bio from "../components/Bio.vue";
 import Card from "../components/Card.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<BaseLayout title="Welcome to Astro.">
   <main>
     <button class="btn btn-primary">One</button>
     <button class="btn btn-secondary">Two</button>
     <button class="btn">Three</button>
+    <Bio client:load />
   </main>
-</Layout>
+</BaseLayout>
