--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Bio from "../components/Bio.vue";
-import Card from "../components/Card.astro";
-import ProjectCard from "../components/small/ProjectCard.astro";
+import Projects from "../components/Projects.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
@@ -10,12 +9,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <button class="btn btn-primary">One</button>
     <button class="btn btn-secondary">Two</button>
     <button class="btn">Three</button>
-    <Bio client:load />
+    <Bio client:only="vue" />
     <hr class="" />
-    <ProjectCard
-      title="Project Title"
-      description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
-      img="/post_img.webp"
-    />
+    <Projects />
   </main>
 </BaseLayout>
