--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -12,23 +12,94 @@ import TechCard from "./small/TechCard.vue";
   />
   <TechCard
     client:load
-    name="Python"
-    image="/tech_logo/python.svg"
-    comments="Python is my go-to language when making projects in many areas such as AI, Data Science and automatisation."
+    name="Vue.js"
+    image="/tech_logo/vue.svg"
+    comments="Vue.js is my first front end framework."
+    level={2}
+  />
+  <TechCard
+    client:load
+    name="React"
+    image="/tech_logo/react.svg"
+    comments="React is the latest front end framework I've started learning. I've used it on Lyrical Bomb."
+    level={2}
+  />
+  <TechCard
+    client:load
+    name="C#"
+    image="/tech_logo/csharp.svg"
+    comments="I've used C# with Unity to make games and with .NET to make desktop applications."
+    level={2}
+  />
+  <TechCard
+    client:load
+    name="JavaScript"
+    image="/tech_logo/javascript.svg"
+    comments="I've used JavaScript to make my websites and web applications."
+    level={2}
+  />
+  <TechCard
+    client:load
+    name="TypeScript"
+    image="/tech_logo/typescript.svg"
+    comments="I've recently started using TypeScript instead of JavaScript when possible. I appreciate the added type safety and the better IDE support. I've used it on Lyrical Bomb."
+    level={2}
+  />
+  <TechCard
+    client:load
+    name="Git"
+    image="/tech_logo/git.svg"
+    comments="Git is my go-to version control system. I've used it for many projects and I'm very familiar with it. While I tend to use GUIs for most of my Git needs, I'm also familiar with the CLI."
     level={3}
   />
   <TechCard
     client:load
-    name="Python"
-    image="/tech_logo/python.svg"
-    comments="Python is my go-to language when making projects in many areas such as AI, Data Science and automatisation."
-    level={3}
+    name="C/C++"
+    image="/tech_logo/cpp.svg"
+    comments="I've used C and C++ in school to learn the basics of programming."
+    level={1}
   />
   <TechCard
     client:load
-    name="Python"
-    image="/tech_logo/python.svg"
-    comments="Python is my go-to language when making projects in many areas such as AI, Data Science and automatisation."
-    level={3}
+    name="Java"
+    image="/tech_logo/java.svg"
+    level={2}
+    comments="I've used Java mainly in school."
   />
+  <TechCard
+    client:load
+    name="Ruby"
+    image="/tech_logo/ruby.svg"
+    level={1}
+    comments="I've used Ruby mainly in school."
+  />
+  <TechCard
+    client:load
+    name="TailwindCSS"
+    image="/tech_logo/tailwindcss.svg"
+    level={4}
+    comments="Tailwind CSS is my go-to CSS framework. I've used it on most of my projects, including this website. I appreciate how it allows me to quickly make good looking websites. Using it has also made me better at regular CSS."
+  />
+  <TechCard
+    client:load
+    name="Firebase"
+    image="/tech_logo/firebase.svg"
+    level={3}
+    comments="I regularly use Firebase to host my websites and databases."
+  />
+  <TechCard
+    client:load
+    name="Fly.io"
+    image="/tech_logo/fly.svg"
+    level={2}
+    comments="I used Fly.io to host my backend for Lyrical Bomb."
+  />
+  <TechCard
+    client:load
+    name="Node.js"
+    image="/tech_logo/nodejs.svg"
+    level={2}
+    comments="I've used Node.js for the backend of Lyrical Bomb (Coupled with Express.JS and Socket.IO). Having a single language for both the frontend and the backend is quite convenient."
+  />
+  <TechCard client:load name="HTML" image="" level={4} comments="It's HTML" />
 </div>
