Dynamic article rooting

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,9 @@ import ThemeSelector from "./ThemeSelector.astro";
     <div class="navbar-start">
       <a href="/" class="">ELIAZ-LR</a>
     </div>
-    <div class="navbar-end">
+    <div class="navbar-end space-x-3">
+      <a href="/">Home</a>
+      <a href="/blog">Blog</a>
       <ThemeSelector />
     </div>
   </div>
