--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,5 +1,17 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import type { BlogSchema } from "../content/config";
+
+export interface Props extends BlogSchema {}
+
+const { title, description, pubDate, updatedDate, heroImage, badge } =
+  Astro.props;
 ---
 
-<BaseLayout />
+<BaseLayout>
+  <main>
+    <article>
+      <h1>{title}</h1>
+    </article>
+  </main>
+</BaseLayout>
