--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -12,6 +12,7 @@ const { title, description, pubDate, updatedDate, heroImage, badge } =
   <main>
     <article>
       <h1>{title}</h1>
+      <slot />
     </article>
   </main>
 </BaseLayout>
