--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,11 @@ import ThemeSelector from "./ThemeSelector.astro";
 <div class="w-full">
   <div class="navbar bg-base-200">
     <div class="navbar-start">
-      <a href="/" class="">ELIAZ-LR</a>
+      <a href="/">ELIAZ-LR</a>
     </div>
-    <div class="navbar-end space-x-3">
-      <a href="/">Home</a>
-      <a href="/blog">Blog</a>
+    <div class="navbar-end">
+      <a href="/" class="btn btn-ghost normal-case">Home</a>
+      <a href="/blog" class="btn btn-ghost normal-case">Blog</a>
       <ThemeSelector />
     </div>
   </div>
