--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -21,19 +21,25 @@ import ProjectCard from "./small/ProjectCard.astro";
     url="https://lyrical-bomb.eliaz-lr.dev/"
   />
   <ProjectCard
-    title="Portfolio Website 3 (this one)"
-    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
+    title="Portfolio Website 3.0 (this one)"
+    description="Rewrite with Astro of my previous website (which was using Vue.js). I talk more in detail about this in an article ;)"
     img="/post_img.webp"
     tags={["TypeScript", "HTML", "Astro", "TailwindCSS", "DaisyUI", "Vue.js"]}
+    gitUrl=""
   />
   <ProjectCard
-    title="Portfolio Website 2"
-    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
+    title="Portfolio Website 2.0"
+    description="This is my second portfolio website. I wanted to make it more user friendly than the first one."
     img="/post_img.webp"
+    tags={["Vue.js", "JavaScript", "HTML", "TailwindCSS"]}
   />
+
   <ProjectCard
-    title="Portfolio Website 1"
-    description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."
+    title="Portfolio Website 1.0"
+    description="This was my first project with Javascript. It emulates the feel of a command line interface."
     img="/post_img.webp"
+    tags={["JavaScript", "HTML", "TailwindCSS"]}
+    gitUrl="https://github.com/Eliaz-LR/Personnal-JS-Site"
+    url="https://old.eliaz-lr.dev/"
   />
 </div>
