--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,5 @@
 ---
-import Card from "../../components/Card.astro";
+import Card from "../../components/small/ArticleCard.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
 
