--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <BaseLayout>
   <main>
+    <h1 class="text-center">Welcome !</h1>
     <Bio client:load />
     <hr />
     <Projects />
