--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -20,6 +20,11 @@ const post: BlogSchema = entry.data;
 const { Content } = await entry.render();
 ---
 
-<ArticleLayout title={post.title} description={post.description}>
+<ArticleLayout
+  title={post.title}
+  description={post.description}
+  date={post.date}
+  tags={post.tags}
+>
   <Content />
 </ArticleLayout>
