--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,6 +4,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
 
 const posts = await getCollection("blog");
+posts.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
 <BaseLayout title="Blog">
@@ -14,6 +15,11 @@ const posts = await getCollection("blog");
           title={post.data.title}
           body={post.data.description}
           href={"/blog/" + post.slug}
+          date={post.data.date.toLocaleDateString("en-UK", {
+            day: "numeric",
+            month: "long",
+            year: "numeric",
+          })}
         />
       ))
     }
