tweaks and profile picture

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,9 @@ import ThemeSelector from "./ThemeSelector.astro";
 <div class="w-full">
   <div class="navbar bg-base-200">
     <div class="navbar-start">
-      <a href="/">ELIAZ-LR</a>
+      <a href="/">
+        <img src="/pp.webp" alt="profile picture" class="h-16" />
+      </a>
     </div>
     <div class="navbar-end">
       <a href="/" class="btn btn-ghost normal-case">Home</a>
