--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ import ProjectCard from "./small/ProjectCard.astro";
   <ProjectCard
     title="Lyrical Bomb"
     description="A lobby based multiplayer game where players have to guess songs that contain a given word in their lyrics. It utilizes Socket.io and the Genius API."
-    img="/post_img.webp"
+    img="/proj_pics/LyricalBomb.webp"
     tags={[
       "React",
       "JavaScript",
@@ -30,14 +30,15 @@ import ProjectCard from "./small/ProjectCard.astro";
   <ProjectCard
     title="Portfolio Website 2.0"
     description="This is my second portfolio website. I wanted to make it more user friendly than the first one."
-    img="/post_img.webp"
+    img="/proj_pics/Website2.webp"
     tags={["Vue.js", "JavaScript", "HTML", "TailwindCSS"]}
+    gitUrl="https://github.com/Eliaz-LR/Personal-website-v2"
   />
 
   <ProjectCard
     title="Portfolio Website 1.0"
     description="This was my first project with Javascript. It emulates the feel of a command line interface."
-    img="/post_img.webp"
+    img="/proj_pics/OldWebsite.webp"
     tags={["JavaScript", "HTML", "TailwindCSS"]}
     gitUrl="https://github.com/Eliaz-LR/Personnal-JS-Site"
     url="https://old.eliaz-lr.dev/"
