--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import ThemeSelector from "./ThemeSelector.astro";
 ---
 
-<div class="w-full">
+<div class="sticky w-full top-0 z-30">
   <div class="navbar bg-base-200">
     <div class="navbar-start">
       <a href="/">
