--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,6 +36,7 @@ import ProjectCard from "./small/ProjectCard.astro";
     img="/proj_pics/Website2.webp"
     tags={["Vue.js", "JavaScript", "HTML", "TailwindCSS"]}
     gitUrl="https://github.com/Eliaz-LR/Personal-website-v2"
+    url="https://portfolio2.eliaz-lr.dev/"
   />
 
   <ProjectCard
