--- a/src/components/small/ArticleCard.astro
+++ b/src/components/small/ArticleCard.astro
@@ -9,7 +9,7 @@ export interface Props {
 const { href, title, body, date } = Astro.props;
 ---
 
-<div class="card w-96 bg-base-100 shadow-xl">
+<div class="card w-96 bg-base-100 shadow-xl border border-base-300">
   <a href={href}>
     <div class="card-body">
       <h2 class="card-title">{title}</h2>
