--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ posts.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
 <BaseLayout title="Blog">
-  <div class="space-y-5">
+  <div class="space-y-5 mt-5">
     {
       posts.map((post) => (
         <Card
