--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
     @apply my-4;
   }
   h1 {
-    @apply text-4xl font-bold;
+    @apply text-4xl font-bold text-center;
   }
   h2 {
     @apply text-3xl font-bold;
