--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,14 +6,32 @@ import "../styles/global.css";
 export interface Props {
   title: string;
   description: string;
+  image?: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, image = "/pp.webp" } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
-<meta name="description" content={description} />
 <meta name="viewport" content="width=device-width" />
 <link rel="icon" type="image/webp" href="/pp.webp" />
 <meta name="generator" content={Astro.generator} />
+
+<!-- Primary Meta Tags -->
 <title>{title}</title>
+<meta name="title" content={title} />
+<meta name="description" content={description} />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content={Astro.url} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content={Astro.url} />
+<meta property="twitter:title" content={title} />
+<meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
