--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,7 +28,8 @@ import ProjectCard from "./small/ProjectCard.astro";
     description="Rewrite with Astro of my previous website (which was using Vue.js). I talk more in detail about this in an article ;)"
     img="/proj_pics/Website3.webp"
     tags={["TypeScript", "HTML", "Astro", "TailwindCSS", "DaisyUI", "Vue.js"]}
-    gitUrl=""
+    gitUrl="https://github.com/Eliaz-LR/portfolio-v3"
+    url="https://eliaz-lr.dev/"
   />
   <ProjectCard
     title="Portfolio Website 2.0"
