--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import ThemeSelector from "./ThemeSelector.astro";
   <div class="navbar bg-base-200">
     <div class="navbar-start">
       <a href="/">
-        <img src="/pp.webp" alt="profile picture" class="h-16" />
+        <img src="/pp.webp" alt="profile picture" class="h-16" height="64px" />
       </a>
     </div>
     <div class="navbar-end">
