--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection } from "astro:content";
 import type { BlogSchema } from "../../content/config";
 import ArticleLayout from "../../layouts/ArticleLayout.astro";
 
