--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -10,7 +10,7 @@ const { title, description, date, tags } = Astro.props;
 <BaseLayout>
   <main>
     <article class="prose prose-lg lg:prose-xl">
-      <h1>{title}</h1>
+      <h1 transition:name={title}>{title}</h1>
       <p class="text-gray-500">
         {
           date.toLocaleDateString("en-UK", {
