--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -646,29 +646,43 @@
 
 <script>
   // @ts-nocheck
-  const theme_selectors = document.querySelectorAll(
-    "#theme-selector div[data-theme]"
-  );
-  const theme = window.localStorage.getItem("data-theme");
+  function theme_selectors() {
 
-  if (theme) {
+    var theme_selectors = document.querySelectorAll(
+      "#theme-selector div[data-theme]"
+      );
+    var theme = window.localStorage.getItem("data-theme");
+      
+    if (theme) {
     updateTheme(theme);
-  } else {
-    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-      updateTheme("dark");
     } else {
-      updateTheme("light");
+      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+        updateTheme("dark");
+      } else {
+        updateTheme("light");
+      }
     }
+
+    theme_selectors.forEach((selector) => {
+      selector.addEventListener("click", () => {
+        console.log("theme_selectors click", selector.getAttribute("data-theme"));
+        updateTheme(selector.getAttribute("data-theme"));
+      });
+    });
+
   }
 
-  theme_selectors.forEach((selector) => {
-    selector.addEventListener("click", () => {
-      updateTheme(selector.getAttribute("data-theme"));
-    });
-  });
+  // Runs on initial navigation
+  theme_selectors();
+  // Runs on view transitions navigation
+  document.addEventListener("astro:after-swap", theme_selectors);
+
 
   function updateTheme(newTheme) {
     document.querySelector("html").setAttribute("data-theme", newTheme);
     window.localStorage.setItem("data-theme", newTheme);
+    console.log("Theme set to " + newTheme);
   }
+
+  
 </script>
