--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -665,7 +665,7 @@
 
     theme_selectors.forEach((selector) => {
       selector.addEventListener("click", () => {
-        console.log("theme_selectors click", selector.getAttribute("data-theme"));
+        // console.log("theme_selectors click", selector.getAttribute("data-theme"));
         updateTheme(selector.getAttribute("data-theme"));
       });
     });
@@ -681,7 +681,7 @@
   function updateTheme(newTheme) {
     document.querySelector("html").setAttribute("data-theme", newTheme);
     window.localStorage.setItem("data-theme", newTheme);
-    console.log("Theme set to " + newTheme);
+    // console.log("Theme set to " + newTheme);
   }
 
   
