--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,24 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script is:inline>
+      // ☝️ This script prevent the FART effect.
+      if (localStorage.getItem("theme") === null) {
+        document.documentElement.setAttribute("data-theme", "light");
+      } else
+        document.documentElement.setAttribute(
+          "data-theme",
+          localStorage.getItem("theme")
+        );
+      // "theme" LocalStorage value is set by the package to remember user preference.
+      // The value is checked and applyed before rendering anything.
+    </script>
+    <script>
+      import { themeChange } from 'theme-change';
+      themeChange();
+      document.addEventListener('astro:after-swap',themeChange)
+      // 👆 you could import the CDN directly instead of these two lines
+    </script>
     <BaseHead title={title} description={description} />
     <ViewTransitions />
   </head>
