--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,25 +9,26 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 const { title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <script is:inline>
       // ☝️ This script prevent the FART effect.
       if (localStorage.getItem("theme") === null) {
-        document.documentElement.setAttribute("data-theme", "light");
+        // document.documentElement.setAttribute("data-theme", "light");
       } else
         document.documentElement.setAttribute(
           "data-theme",
-          localStorage.getItem("theme")
+          localStorage.getItem("theme"),
         );
       // "theme" LocalStorage value is set by the package to remember user preference.
       // The value is checked and applyed before rendering anything.
     </script>
     <script>
-      import { themeChange } from 'theme-change';
+      import { themeChange } from "theme-change";
       themeChange();
-      document.addEventListener('astro:after-swap',themeChange)
+
+      document.addEventListener("astro:after-swap", themeChange);
       // 👆 you could import the CDN directly instead of these two lines
     </script>
     <BaseHead title={title} description={description} />
